# image-stitcher

./: .gitignore  LICENSE  README.md  approaches  attemptlist  config.yaml  createsnips.py  main.ipynb  main.py  requirements.txt  setup.cfg  stitcher.py  test.py
.ipynb_checkpoints/: main-checkpoint.ipynb
image_stitcher/: stitcher.py
image_stitcher/utils/: logger.py  proc.py
models/: aerial-unet-seg.ipynb  aerial-unet-seg3.ipynb  skeyenet2.ipynb
mytests/testsnippets/: road-segmentation.ipynb  segmentationnotes  semsegaerial.py  test.py  test2.py  test3.py  test4.py  test5.py
saved_stitches/stitched13/: config.yaml
saved_stitches/stitched14/: config.yaml
test_set/test_s_imgs/a_1/: clicked_points.txt
test_set/test_s_imgs/a_10/: clicked_points.txt
test_set/test_s_imgs/a_11/: clicked_points.txt
test_set/test_s_imgs/a_12/: clicked_points.txt
test_set/test_s_imgs/a_13/: clicked_points.txt
test_set/test_s_imgs/a_14/: clicked_points.txt
test_set/test_s_imgs/a_16/: clicked_points.txt
test_set/test_s_imgs/a_17/: clicked_points.txt
test_set/test_s_imgs/a_18/: clicked_points.txt
test_set/test_s_imgs/a_19/: clicked_points.txt
test_set/test_s_imgs/a_2/: clicked_points.txt
test_set/test_s_imgs/a_20/: clicked_points.txt
test_set/test_s_imgs/a_3/: clicked_points.txt
test_set/test_s_imgs/a_4/: clicked_points.txt
test_set/test_s_imgs/a_5/: clicked_points.txt
test_set/test_s_imgs/a_6/: clicked_points.txt
test_set/test_s_imgs/a_7/: clicked_points.txt
tests/: config.yaml  test.py
utils/: proc.py  structs.py  utils.py
(+1 files in other folders)
