[metadata]
name = image_stitcher
version = 0.9.1
author = Janak Shah
author_email = janak.sh41@gmail.com
description = Stitch arbitrary or consecutive sets of images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codegallivant/image-stitcher
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jinja2
    cv-bridge
    matplotlib
    numpy
    opencv-contrib-python
    opencv-python
    pillow
    PyYAML
    tqdm
    typeguard
    scipy

[options.packages.find]
include = image_stitcher*